--- a/public/implantation.html
+++ b/public/implantation.html
@@ -871,57 +871,55 @@
             </div>
         </section>
         <section class="section implants bg-blue">
-            <div class="container">
-                <div class="implants-title h4">
-                    В нашей стоматологической клинике «Дентополис» мы используем следующие системы имлпантантов:
-                </div>
-                <div class="swiper implants-slider slider-four blue">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-1.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-2.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-3.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-4.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-5.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-6.jpg" alt="implant" loading="lazy">
-                        </div>
-                        <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-7.jpg" alt="implant" loading="lazy">
-                        </div>
-                    </div>
-                    <div class="slider-arrows">
-                        <div class="slider-prev">
-                        <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                            <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>              
-                        </div>
-                        <div class="slider-next">
-                        <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                            <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>               
-                        </div>          
-                    </div>
-                </div>
+          <div class="container">
+            <div class="implants-title">
+              В нашей стоматологической клинике «Дентополис» мы используем следующие системы имлпантантов:
             </div>
+            <div class="swiper implants-slider slider-four blue">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-1.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-2.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-3.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-4.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-5.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-6.jpg" alt="implant" loading="lazy">
+                </div>
+                <div class="swiper-slide implants-slider-item">
+                  <img src="./images/implant-7.jpg" alt="implant" loading="lazy">
+                </div>
+              </div>
+              <div class="slider-arrows">
+                  <div class="slider-prev">
+                  <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                      <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>              
+                  </div>
+                  <div class="slider-next">
+                  <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                      <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>               
+                  </div>          
+              </div>
+            </div>
+          </div>
         </section>
         <section class="section bg-blue-light">
             <div class="container">
-              <div class="doctors-title small">
-                <div class="h4">
-                  Врачи клиники "Дентополис", которые занимаются имплантацией и протезированием на имплантатах
-                </div>                
+              <div class="doctors-title small">                
+                Врачи клиники "Дентополис", которые занимаются имплантацией и протезированием на имплантатах                               
               </div>
               <div class="swiper doctors-slider slider-four blue-light">
                 <div class="swiper-wrapper">
@@ -1098,14 +1096,17 @@
                 </div>   
               </div>          
             </div>
-            <a href="#" class="ui-btn ui-btn-green doctors-all">
-              Все врачи
-              <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>              
-            </a>
+            <div class="ui-centered">
+              <a href="#" class="ui-btn ui-btn-green">
+                Все врачи
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+                  <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </a>
+            </div>            
         </section>
+
         <section class="section examples bg-blue-light">            
           <div class="container">
             <div class="section-title">
@@ -1113,18 +1114,18 @@
             </div>                
             <div class="examples-wrapper margin">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-xl-6 col-lg-12">
                   <div class="example flex horizontal">
                     <div class="example-images">
-                      <div class="before">                  
+                      <div class="example-before">                  
                         <img src="./images/before.jpg" alt="before" loading="lazy">
                       </div>
-                      <div class="after">                 
+                      <div class="example-after">                 
                         <img src="./images/after.jpg" alt="after" loading="lazy">
                       </div>
                     </div>
                     <div class="example-text">
-                      <div class="description">
+                      <div class="example-description">
                         <p>
                           Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
                         </p>
@@ -1146,18 +1147,18 @@
                   </div>                            
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-xl-6 col-lg-12">
                   <div class="example flex horizontal">
                       <div class="example-images">
-                          <div class="before">                  
+                          <div class="example-before">                  
                               <img src="./images/before.jpg" alt="before" loading="lazy">
                           </div>
-                          <div class="after">                 
+                          <div class="example-after">                 
                               <img src="./images/after.jpg" alt="after" loading="lazy">
                           </div>
                       </div>
                       <div class="example-text">
-                          <div class="description">
+                          <div class="example-description">
                             <p>
                               Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
                             </p>                                   
@@ -1278,7 +1279,11 @@
           <div class="col-lg-4">
             <div class="footer-main">
               <img src="./images/logo.png" alt="logo" class="footer-main-logo" loading="lazy">
-              <button class="ui-btn">Записаться</button>
+              <div class="footer-main-appointment">
+                <button class="ui-btn">
+                  Записаться
+                </button>
+              </div>              
               <div class="footer-main-socials">
                 <a href="#">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
