--- a/public/contacts.html
+++ b/public/contacts.html
@@ -643,95 +643,98 @@
                       </div>
                   </div>
               </div>
-            </div>
-            <div class="swiper description-slider slider-four blue-light">
+            </div>                        
+          </div>
+        </section>
+        <section class="section-gallery bg-blue-light">
+          <div class="container">
+            <div class="swiper gallery-slider slider-four blue-light">
               <div class="swiper-wrapper">
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-1.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-2.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-3.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-4.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-5.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-6.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-7.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-8.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-9.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-10.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-11.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-12.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-13.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-14.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-15.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-16.jpg" alt="photo">
                   </div>
                 </div>
-                <div class="swiper-slide description-slide">
-                  <div class="description-slide-item">
+                <div class="swiper-slide gallery-slide">
+                  <div class="gallery-item">
                     <img src="./images/gallery-17.jpg" alt="photo">
                   </div>
-                </div>
-                
+                </div>              
               </div>
               <div class="slider-arrows">
                 <div class="slider-prev">           
@@ -747,7 +750,7 @@
                   </svg>               
                 </div>          
               </div> 
-            </div>              
+            </div>
           </div>
         </section>
         <section class="section requisites bg-blue">
@@ -881,7 +884,11 @@
           <div class="col-lg-4">
             <div class="footer-main">
               <img src="./images/logo.png" alt="logo" class="footer-main-logo" loading="lazy">
-              <button class="ui-btn">Записаться</button>
+              <div class="footer-main-appointment">
+                <button class="ui-btn">
+                  Записаться
+                </button>
+              </div>              
               <div class="footer-main-socials">
                 <a href="#">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
