--- a/public/wisdomTeeth.html
+++ b/public/wisdomTeeth.html
@@ -868,7 +868,11 @@
           <div class="col-lg-4">
             <div class="footer-main">
               <img src="./images/logo.png" alt="logo" class="footer-main-logo" loading="lazy">
-              <button class="ui-btn">Записаться</button>
+              <div class="footer-main-appointment">
+                <button class="ui-btn">
+                  Записаться
+                </button>
+              </div>              
               <div class="footer-main-socials">
                 <a href="#">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
