--- a/src/about.html
+++ b/src/about.html
@@ -468,47 +468,47 @@
         </div>
       </section>
 
-      <section class="about-info">
-        <nav class="about-tabs bg-blue">
-            <div class="container">
-              <ul>
-                <li>
-                  <a href="javascript:void(0)" class="tab">
-                    Оборудование
+      <section class="bg-blue">
+        <div class="container">
+          <nav class="about-nav">            
+            <ul>
+              <li>
+                <a href="javascript:void(0)">
+                  Оборудование
                 </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)" class="tab">
-                    Гарантии
+              </li>
+              <li>
+                <a href="javascript:void(0)">
+                  Гарантии
                 </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)" class="tab active">
-                    Вакансии
+              </li>
+              <li>
+                <a href="javascript:void(0)">
+                  Вакансии
                 </a>
-                </li>
-              </ul>               
-            </div>            
-        </nav>
-      </section>
+              </li>
+            </ul>            
+          </nav>
+        </div>
+      </section>     
 
-      <section class="section about-description bg-blue-light">
+      <section class="section section-advantages bg-blue-light">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <div class="about-description-card">
-                <div class="head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="advantages-card">
+                <div class="advantages-card-head">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M15.9606 17.3724C16.7403 17.3724 17.3724 16.7403 17.3724 15.9606C17.3724 15.1809 16.7403 14.5488 15.9606 14.5488C15.1809 14.5488 14.5488 15.1809 14.5488 15.9606C14.5488 16.7403 15.1809 17.3724 15.9606 17.3724Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M15.9592 23.0181C19.8577 23.0181 23.0181 19.8577 23.0181 15.9592C23.0181 12.0607 19.8577 8.90039 15.9592 8.90039C12.0607 8.90039 8.90039 12.0607 8.90039 15.9592C8.90039 19.8577 12.0607 23.0181 15.9592 23.0181Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M15.9598 28.6657C22.9771 28.6657 28.6657 22.9771 28.6657 15.9598C28.6657 8.94254 22.9771 3.25391 15.9598 3.25391C8.94254 3.25391 3.25391 8.94254 3.25391 15.9598C3.25391 22.9771 8.94254 28.6657 15.9598 28.6657Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                    
-                  <div class="h4">
+                  <div class="advantages-card-title">
                     миссия
                   </div>                                      
                 </div>
-                <div class="content">
+                <div class="advantages-card-content">
                   <p>
                     Восстановление функциональности ваших зубов и их естественной природной красоты, что помогает сохранить здоровье организма в целом. 
                   </p>
@@ -523,18 +523,18 @@
             </div>
 
             <div class="col-lg-4">
-              <div class="about-description-card">
-                <div class="head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="advantages-card">
+                <div class="advantages-card-head">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M10.1348 20.0254V30.6661L16.0014 26.2661L21.8681 30.6661V20.0254" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M26.2677 11.6C26.2688 13.2553 25.8692 14.8863 25.103 16.3536C24.3368 17.8209 23.2267 19.0809 21.8677 20.026C20.1475 21.2273 18.0992 21.8699 16.0011 21.8667C13.9029 21.8699 11.8546 21.2273 10.1344 20.026C8.68566 19.0173 7.52153 17.652 6.7544 16.0621C5.98728 14.4721 5.64308 12.7112 5.75505 10.9495C5.86702 9.18771 6.43137 7.48457 7.39361 6.00454C8.35584 4.52452 9.68345 3.31761 11.2482 2.50037C12.813 1.68314 14.562 1.28319 16.3265 1.33914C18.0909 1.3951 19.8111 1.90508 21.321 2.81982C22.8308 3.73457 24.0793 5.02317 24.9458 6.5612C25.8123 8.09922 26.2676 9.83469 26.2677 11.6V11.6Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                    
-                  <div class="h4">
+                  <div class="advantages-card-title">
                     Наши качества
                   </div>                                      
                 </div>
-                <div class="content">
+                <div class="advantages-card-content">
                   <p>
                     Открытость и доброжелательность. Вас встретит с улыбкой наш администратор, в кабинете врач не
                     просто проведет манипуляции, но посоветует то, что лучше именно в вашем случае, даст подробные рекомендации.                   
@@ -552,17 +552,17 @@
             </div>
 
             <div class="col-lg-4">
-              <div class="about-description-card">
-                <div class="head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="advantages-card">
+                <div class="advantages-card-head">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M1.76562 11.8046L6.9421 5.33398H12.8049M1.76562 11.8046L16.0009 29.0006M1.76562 11.8046H11.55M30.2362 11.8046L25.0597 5.33398H18.6676M30.2362 11.8046L16.0009 29.0006M30.2362 11.8046H21.3343M16.0009 29.0006L21.3343 11.8046M16.0009 29.0006L11.55 11.8046M21.3343 11.8046L18.6676 5.33398M21.3343 11.8046H11.55M18.6676 5.33398H12.8049M12.8049 5.33398L11.55 11.8046" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                    
-                  <div class="h4">
+                  <div class="advantages-card-title">
                     Наши ценности
                   </div>                                      
                 </div>
-                <div class="content">
+                <div class="advantages-card-content">
                   <p>
                     Забота о пациентах, забота о врачах. Счастливый, доброжелательный, вовлеченный в процесс
                     и результат доктор — это уже первоначальная помощь для пациента.  
@@ -581,95 +581,98 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="swiper description-slider slider-four blue-light">
+      <section class="section-gallery bg-blue-light">
+        <div class="container">
+          <div class="swiper gallery-slider slider-four blue-light">
             <div class="swiper-wrapper">
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-1.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-2.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-3.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-4.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-5.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-6.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-7.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-8.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-9.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-10.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-11.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-12.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-13.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-14.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-15.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-16.jpg" alt="photo">
                 </div>
               </div>
-              <div class="swiper-slide description-slide">
-                <div class="description-slide-item">
+              <div class="swiper-slide gallery-slide">
+                <div class="gallery-item">
                   <img src="./images/gallery-17.jpg" alt="photo">
                 </div>
-              </div>
-              
+              </div>              
             </div>
             <div class="slider-arrows">
               <div class="slider-prev">           
@@ -687,7 +690,7 @@
             </div> 
           </div>
         </div>
-      </section>     
+      </section>
 
       <section class="section services bg-blue">
         <div class="container">
@@ -821,7 +824,7 @@
       </section>
 
       <!-- наша команда -->
-      <section class="section bg-blue-light">            
+      <section class="section section-team bg-blue-light">            
         <div class="container">
           <div class="section-title">                 
             Наша команда                                    
@@ -1091,15 +1094,15 @@
                 </div>                      
               </div>
             </div>
-
-
-            <a href="#" class="ui-btn ui-btn-green doctors-all">
-              Показать всех
-              <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>              
-            </a>
+            <div class="ui-centered">
+              <a href="#" class="ui-btn ui-btn-green">
+                Показать всех
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+                  <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </a>
+            </div>            
           </div>
 
           <div class="doctors-tabs-wrapper" id="assistants">
@@ -1310,12 +1313,12 @@
 
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue">
+      <section class="section reviews bg-blue-light">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
           </div>
-          <div class="swiper reviews-slider slider-four blue">
+          <div class="swiper reviews-slider slider-four blue-light">
             <div class="swiper-wrapper">
 
               <div class="swiper-slide reviews-slide">
@@ -1577,7 +1580,11 @@
           <div class="col-lg-4">
             <div class="footer-main">
               <img src="./images/logo.png" alt="logo" class="footer-main-logo" loading="lazy">
-              <button class="ui-btn">Записаться</button>
+              <div class="footer-main-appointment">
+                <button class="ui-btn">
+                  Записаться
+                </button>
+              </div>              
               <div class="footer-main-socials">
                 <a href="#">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
