--- a/src/about.html
+++ b/src/about.html
@@ -498,7 +498,7 @@
             <div class="col-lg-4">
               <div class="advantages-card">
                 <div class="advantages-card-head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M15.9606 17.3724C16.7403 17.3724 17.3724 16.7403 17.3724 15.9606C17.3724 15.1809 16.7403 14.5488 15.9606 14.5488C15.1809 14.5488 14.5488 15.1809 14.5488 15.9606C14.5488 16.7403 15.1809 17.3724 15.9606 17.3724Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M15.9592 23.0181C19.8577 23.0181 23.0181 19.8577 23.0181 15.9592C23.0181 12.0607 19.8577 8.90039 15.9592 8.90039C12.0607 8.90039 8.90039 12.0607 8.90039 15.9592C8.90039 19.8577 12.0607 23.0181 15.9592 23.0181Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -525,7 +525,7 @@
             <div class="col-lg-4">
               <div class="advantages-card">
                 <div class="advantages-card-head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M10.1348 20.0254V30.6661L16.0014 26.2661L21.8681 30.6661V20.0254" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M26.2677 11.6C26.2688 13.2553 25.8692 14.8863 25.103 16.3536C24.3368 17.8209 23.2267 19.0809 21.8677 20.026C20.1475 21.2273 18.0992 21.8699 16.0011 21.8667C13.9029 21.8699 11.8546 21.2273 10.1344 20.026C8.68566 19.0173 7.52153 17.652 6.7544 16.0621C5.98728 14.4721 5.64308 12.7112 5.75505 10.9495C5.86702 9.18771 6.43137 7.48457 7.39361 6.00454C8.35584 4.52452 9.68345 3.31761 11.2482 2.50037C12.813 1.68314 14.562 1.28319 16.3265 1.33914C18.0909 1.3951 19.8111 1.90508 21.321 2.81982C22.8308 3.73457 24.0793 5.02317 24.9458 6.5612C25.8123 8.09922 26.2676 9.83469 26.2677 11.6V11.6Z" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -554,7 +554,7 @@
             <div class="col-lg-4">
               <div class="advantages-card">
                 <div class="advantages-card-head">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="advantages-card-icon">
                     <rect width="32" height="32" fill="white"/>
                     <path d="M1.76562 11.8046L6.9421 5.33398H12.8049M1.76562 11.8046L16.0009 29.0006M1.76562 11.8046H11.55M30.2362 11.8046L25.0597 5.33398H18.6676M30.2362 11.8046L16.0009 29.0006M30.2362 11.8046H21.3343M16.0009 29.0006L21.3343 11.8046M16.0009 29.0006L11.55 11.8046M21.3343 11.8046L18.6676 5.33398M21.3343 11.8046H11.55M18.6676 5.33398H12.8049M12.8049 5.33398L11.55 11.8046" stroke="#BD5B9E" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                    
@@ -830,13 +830,13 @@
             Наша команда                                    
           </div>
           <div class="doctors-tabs">
-              <button class="ui-btn ui-btn-tab active" data-tab="medics">
+              <button class="ui-btn ui-btn-tab doctors-tabs-item active" data-tab="medics">
                   Врачи-стоматологи
               </button>
-              <button class="ui-btn ui-btn-tab" data-tab="assistants">
+              <button class="ui-btn ui-btn-tab doctors-tabs-item" data-tab="assistants">
                   Ассистенты
               </button>
-              <button class="ui-btn ui-btn-tab" data-tab="admins">
+              <button class="ui-btn ui-btn-tab doctors-tabs-item" data-tab="admins">
                   Администраторы
               </button>
           </div>
